fixing spacing on services

--- a/css/style.css
+++ b/css/style.css
@@ -326,9 +326,13 @@ header {
 @media (min-width:800px) {
     .services {
         display: flex;
-        max-width: 1000px;
+        /* max-width: 1000px; */
+        width: 100%;
         margin-left: auto;
         margin-right: auto; 
+    }
+    .service {
+      width: 100%;
     }
     .service + .service {
         margin-left: 2em;
